# USTC-AI-homework

./: .gitignore  main.py  pyproject.toml
CNN-MNIST/: dataloader.py  log.py  main.py  model.py  predict_handwritten.py  report.fdb_latexmk  report.fls  report.tex  run_experiments.sh  test.ipynb  train.py
CNN-MNIST/config/: config_1_model_1.yaml  config_1_model_2.yaml  config_2_model_1.yaml  config_2_model_2.yaml  config_3_model_1.yaml  config_3_model_2.yaml  config_4_model_1.yaml  config_4_model_2.yaml  config_5_model_1.yaml  config_5_model_2.yaml  config_6_model_1.yaml  config_6_model_2.yaml  config_7_model_1.yaml  config_7_model_2.yaml  config_8_model_1.yaml  config_8_model_2.yaml
DQN/: DQN.py  log.py  main.py  play.py  report.tex  train.py
DQN/config/: dqn_all.yaml
