[project]
name = "ustc-ai-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.27.0",
]
